# malla_baxter

./: CMakeLists.txt  CMakeLists.txt~  README.md  package.xml  package.xml~
config/: calibration.yaml
data/: elbow_pitch.bag  elbow_yaw.bag  shoulder_pitch.bag  shoulder_pitch2.bag  shoulder_yaw.bag  test2.bag
include/: RVIZ_markers.h  markers.h
launch/: calibration.launch  joint_mapping.launch  move_baxter.launch  start_sim.launch
scripts/: baxter_sim.sh  calibration.py  elbowPitch.py  frames.gv  getShoulderPitchAngle.py  getShoulderYaw.py  jointAllParser.py  jointParser.py  jointPubThreeJoints.py  jointPubThreeJoints.py~  jointPublisher.py  jointPublisher.py~  set_joint_angle.py  set_joints.py  torque_data_collect.py
src/: move_baxter.cpp  moveit_interface.cpp  rviz_plotter.cpp
